[package]
name = "badlopo_cli"
version = "0.4.0"
edition = "2021"
authors = ["lopo<lopo@zju.edu.cn>"]
description = "my cli tool"
license = "MIT"
repository = "https://github.com/badlopo/badlopo_cli"

[[bin]]
# overwrite the default bin name
name = "badlopo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }

# subcommand hash
base64 = "0.22.1"
digest = "0.10.7"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
# sha3 = "0.10.8"

# subcommand image
image = "0.25.5"

# subcommand serve
rocket = "0.5.1"